--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Elevatrix Website</title>
-        <link rel="stylesheet" href="style.css"/>
-    </head>
-<body>
-    <div>Hellow World
-</body>
-    </html>
+  <head>
+    <title>Elevatrix Website</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="logo">
+        <img src="images/logo.png" />
+      </div>
+      <div class="navbar">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="Services.html">Services</a></li>
+            <li><a href="Portfolio.html">Portfolio</a></li>
+            <li><a href="Blogs.html">Blogs</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+          <img src="search" />
+        </nav>
+      </div>
+    </div>
+  </body>
+</html>
