--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="main">
     <div class="wrapper">
       <div class="logo">
-        <img src="images/logo.png" />
+        <img src="images/ES_Logo-04-removebg.png" />
       </div>
       <div class="navbar">
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" style="color: #f5900d;">Home</a></li>
+
             <li><a href="about.html">About</a></li>
             <li><a href="Services.html">Services</a></li>
             <li><a href="Portfolio.html">Portfolio</a></li>
@@ -23,5 +25,6 @@
         </nav>
       </div>
     </div>
+  </div>
   </body>
 </html>
