--- a/index.html
+++ b/index.html
@@ -1,30 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Elevatrix Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Elevate Your IT Experience</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="main">
-    <div class="wrapper">
+    <header>
       <div class="logo">
-        <img src="images/ES_Logo-04-removebg.png" />
+        <span class="bracket">&lt;</span><span class="orange">E</span
+        ><span class="bracket">&gt;</span>
       </div>
-      <div class="navbar">
-        <nav>
-          <ul>
-            <li><a href="index.html" style="color: #f5900d;">Home</a></li>
+      <nav>
+        <ul>
+          <li class="active">Home</li>
+          <li>About</li>
+          <li>Services</li>
+          <li>Portfolio</li>
+          <li>Packages</li>
+          <li>Blogs</li>
+          <li>Contact</li>
+          <li><i class="fas fa-search"></i></li>
+        </ul>
+      </nav>
+    </header>
 
-            <li><a href="about.html">About</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="Blogs.html">Blogs</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-          </ul>
-          <img src="search" />
-        </nav>
+    <section class="hero">
+      <div class="hero-left">
+        <h1>Elevate Your IT<br />Experience</h1>
+        <button>Schedule a free Consultation</button>
       </div>
-    </div>
-  </div>
+      <div class="hero-right">
+        <div class="image-overlay"></div>
+        <img src="images/slider-1-shape-1.jpg" alt="Team working" />
+        <img src="images/slider-1-shape-2.jpg" alt="Team working" />
+      </div>
+    </section>
+    
+    <footer>
+      <div class="lastsection">
+        <p style="font-size: 18px">Let’s start working together</p>
+        <h1>sajid@elevatrixsolutions.com</h1>
+        <p style="margin-top: 90px; font-size: 16px">
+          @Copyright 2025 by Elevatrix Solutions
+        </p>
+      </div>
+      <div class="lastpart">
+        <a href="">About</a>
+        <a href="">Meet the team</a>
+        <a href="">News and Media</a>
+        <a href="">Our Projects</a>
+        <a href="">Contact</a>
+      </div>
+      <div class="thirdpart">
+        <a href="">Our Faqs</a>
+        <a href="">Services</a>
+        <a href="">Gallery</a>
+        <a href="">Help</a>
+      </div>
+    </footer>
   </body>
 </html>
