improve the design

--- a/index.html
+++ b/index.html
@@ -102,11 +102,37 @@
           >
         </div>
       </section>
-      <!------VideoSection------>
+      <!-- Video Section -->
       <div class="section-wrapper">
         <div class="bg-row">
           <div class="onebg-img"></div>
           <div class="twobg-img"></div>
+
+          <!-- Video Button on the end -->
+          <div class="video-button">
+            <div class="circle-text">
+              <svg viewBox="0 0 100 100" class="text-circle">
+                <defs>
+                  <path
+                    id="circlePath"
+                    d="M50,50 m-35,0 a35,35 0 1,1 70,0 a35,35 0 1,1 -70,0"
+                  />
+                </defs>
+                <text>
+                  <textPath
+                    xlink:href="#circlePath"
+                    startOffset="50%"
+                    text-anchor="middle"
+                  >
+                    WATCH OUR AGENCY PORTFOLIO VIDEO
+                  </textPath>
+                </text>
+              </svg>
+            </div>
+            <div class="center-circle">
+              <div class="play-icon">&#9654;</div>
+            </div>
+          </div>
         </div>
       </div>
 
