improve tge design

--- a/index.html
+++ b/index.html
@@ -101,6 +101,22 @@
             >→</a
           >
         </div>
+        <!------100+Brands Trust-------->
+        <section class="brandssec">
+          <div class="innerbrandsec">
+            <div style="padding:15px 0px;">
+            <p style="color:#777777;font-size:14px;margin:0px 10px;text-align:center;">100+BRANDS TRUST US</p>
+            <div>
+              <div class="brandsdisplay">
+                <img src=""/>
+                <img src=""/>
+                <img src=""/>
+                <img src=""/>
+                <img src=""/>
+
+              </div>
+          </div>
+          <section>
         <!-------Award Winning Section----->
         <section class="awardwinning">
           <div class="innerdivaward">
