--- a/index.html
+++ b/index.html
@@ -62,6 +62,30 @@
       
       <div class="img-column img2"></div>
       <div class="img-column img3"></div>
+      <div class="video-button">
+            <div class="circle-text">
+              <svg viewBox="0 0 100 100" class="text-circle">
+                <defs>
+                  <path
+                    id="circlePath"
+                    d="M50,50 m-35,0 a35,35 0 1,1 70,0 a35,35 0 1,1 -70,0"
+                  />
+                </defs>
+                <text>
+                  <textPath
+                    xlink:href="#circlePath"
+                    startOffset="50%"
+                    text-anchor="middle"
+                  >
+                    WATCH OUR AGENCY PORTFOLIO VIDEO
+                  </textPath>
+                </text>
+              </svg>
+            </div>
+            <div class="center-circle">
+              <div class="play-icon">&#9654;</div>
+            </div>
+          </div>
     </div>
   </section>
             
